# HnH-Core

./: .gitignore  .pre-commit-config.yaml  README.md  en-user-guide-readme.md  pyproject.toml  user-guide-readme.md
.cursor/commands/: speckit.constitution.md
.cursor/rules/: performance-optimization.mdc
.github/workflows/: ci.yml  release.yml
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  spec-template.md  tasks-template.md
hnh/: __init__.py  agent.py  cli.py
hnh/astrology/: __init__.py  aspect_model.py  aspects.py  ephemeris.py  houses.py  natal_chart.py  planet.py  transit_state.py  transits.py  zodiac_expression.py
hnh/config/: __init__.py  loader.py  replay_config.py  sex_transit_config.py
hnh/core/: __init__.py  identity.py  natal.py  parameters.py
hnh/identity/: __init__.py  schema.py  sensitivity.py
hnh/interface/: __init__.py  llm_adapter.py  teacher.py
hnh/lifecycle/: __init__.py  constants.py  engine.py  fatigue.py  run.py  stress.py
hnh/logging/: __init__.py  contracts.py  state_logger.py  state_logger_v2.py
hnh/memory/: __init__.py  relational.py  update_rules.py
hnh/modulation/: __init__.py  boundaries.py  delta.py
hnh/sex/: __init__.py  delta_32.py  identity_hash.py  polarity.py  resolution.py  resolver.py  sect.py  sign_polarity.py  transit_modulator.py  validation.py
hnh/state/: __init__.py  assembler.py  behavioral_core.py  dynamic_state.py  modulation.py  replay.py  replay_v2.py
scripts/: 01_basic_step.py  02_replay_and_log.py  03_relational_memory.py  04_teacher_pilot.py  05_multiple_dates_jsonl.py  README.en.md  README.md  benchmark_002.py  release_local.md  release_prepare.sh
scripts/001/: 02_replay_and_log.py  03_relational_memory.py  05_multiple_dates_jsonl.py  README.en.md  README.md
scripts/002/: 01_schema_and_identity.py  02_sensitivity.py  03_raw_delta_and_bounds.py  04_state_assembly.py  05_memory_v2.py  06_logging_v2.py  07_replay_v2.py  08_full_step_v2.py  09_life_simulation_102y.py  README.md
scripts/004/: 01_ephemeris_10_planets.py  02_houses_placidus.py  03_natal_10_planets_houses.py  04_zodiac_expression.py  05_zodiac_hash.py  06_full_zodiac_pipeline.py  09_life_simulation_102y.py  README.md
scripts/005/: 01_lifecycle_formulas_demo.py  02_transit_stress.py  03_fatigue_engine.py  04_activity_suppression.py  05_death_and_will.py  06_transcendence.py  07_lifecycle_replay.py  08_life_simulation_lifecycle.py  README.md
scripts/006/: README.md  life_simulation_102y.py  run_agent_demo.py
scripts/008/: README.md  calibration_sanity.py  life_simulation_102y.py
scripts/009/: calibration_sex_transit.py  life_simulation_102y.py
specs/001-deterministic-personality-engine/: CONSTITUTION_CHECKLIST.md  data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-hierarchical-personality-model/: phase9.md  plan.md  spec.md  tasks.md
specs/003-performance-optimization/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-planetary-core-zodiac-expression/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/005-lifecycle-entropy-research/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/006-layered-agent-architecture/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/007-release-tags-required/: quickstart.md  spec.md
specs/008-sex-polarity-32d-shifts/: data-model.md  plan.md  quickstart.md  spec.md  tasks.md
specs/009-sex-transit-response/: plan.md  spec.md  tasks.md
tests/: __init__.py
tests/integration/: test_006_agent_replay.py  test_008_calibration.py  test_008_identity_sex.py  test_009_calibration.py  test_009_sex_transit_response.py  test_dynamic_state.py  (+4 more)
(+49 files in other folders)
