[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hnh-core"
version = "0.1.1"
description = "HnH — deterministic personality simulation engine"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "orjson>=3.9",
    "pydantic>=2.0",
    "pyswisseph>=2.10",
    "structlog>=24.0",
    "xxhash>=3.0",
]
[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=24.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
    "pre-commit>=3.0",
]
# astrology: pyswisseph теперь в основных зависимостях; extra оставлен для обратной совместимости (пустой или дублирует)
astrology = [
    "pyswisseph>=2.10",
]

[project.scripts]
hnh = "hnh.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["hnh*"]

[tool.black]
line-length = 100
target-version = ["py312"]
include = '\.pyi?$'
extend-exclude = "/(\\.git|\\.venv|__pycache__)/"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-v --strict-markers"
markers = [
    "unit: unit tests",
    "integration: integration tests",
]

[tool.coverage.run]
source = ["hnh"]
branch = true
# Omit optional/legacy: 002 core = identity, config, modulation, memory, state (assembler, replay_v2), logging/state_logger_v2
omit = [
    "hnh/interface/*",
    "hnh/logging/state_logger.py",
    "hnh/logging/contracts.py",
    "hnh/astrology/*",
    "hnh/core/*",
    "hnh/cli.py",
    "hnh/config/loader.py",
    "hnh/state/dynamic_state.py",
    "hnh/state/modulation.py",
    "hnh/state/replay.py",
    "tests/*",
]

[tool.coverage.report]
# 002 spec: 99%+ for core modules
fail_under = 99
show_missing = true
